--- a/.gitignore
+++ b/.gitignore
@@ -115,8 +115,14 @@ dmypy.json
 .pyre/
 
 # ignoring sample csv-s
-teszt/
 *.csv
 
 # ignoring xmls
 *.xml
+
+#ignoring folders
+teszt/
+etc/
+madgwick/
+thesis/
+utils/
